Fixed anchor links for dailyui page.

--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -46,229 +46,229 @@
           <!--Begin main content-->
           <div class="row">
             <div class="col-6">
-              <h3><a href="#001-sign-up">001 - Sign Up</a></h3>
+              <h3><a id="001-sign-up">001 - Sign Up</a></h3>
               <p>Sign up interface for a fictional video blog app for foodies.</p>
               <p><img src="../images/daily-ui/001-sign-up.png" class="img-responsive" alt="Sign up interface for a fictional video blog app for foodies."/></p>
             </div>
             <div class="col-6">
-              <h3><a href="#002-credit-card-checkout">002 - Credit Card Checkout</a></h3>
+              <h3><a id="002-credit-card-checkout">002 - Credit Card Checkout</a></h3>
               <p>Interface for a credit card checkout on a small viewport.</p>
               <p><img src="../images/daily-ui/002-credit-card-checkout.png" class="img-responsive" alt="Interface for a credit card checkout on a small viewport."/></p>
             </div>
           </div>
           <div class="row">
             <div class="col-12">
-              <h3><a href="#003-landing-page">003 - Landing page (above the fold)</a></h3>
+              <h3><a id="003-landing-page">003 - Landing page (above the fold)</a></h3>
               <p>Landing page for a fictional website.</p>
               <p><img src="../images/daily-ui/003-landing-page.png" class="img-responsive" alt="Landing page for a fictional website."/></p>
             </div>
           </div>
           <div class="row">
             <div class="col-6">
-              <h3><a href="#004-calculator">004 - Calculator</a></h3>
+              <h3><a id="004-calculator">004 - Calculator</a></h3>
               <p>Calculator interface for mobile - experimenting with purple and pink.</p>
               <p><img src="../images/daily-ui/004-calculator.jpg" class="img-responsive" alt="Calculator interface for mobile - experimenting with purple and pink."/></p>
             </div>
             <div class="col-6">
-              <h3><a href="#app-icon">005 - App Icon</a></h3>
+              <h3><a id="005-app-icon">005 - App Icon</a></h3>
               <p>App icon for a fictional app - PawFinder.</p>
               <p><img src="../images/daily-ui/005-app-icon.jpg" class="img-responsive" alt="App icon for a fictional app - PawFinder."/></p>
             </div>
           </div>
           <div class="row">
             <div class="col-6">
-              <h3><a href="#006-user-profile">006 - User Profile</a></h3>
+              <h3><a id="006-user-profile">006 - User Profile</a></h3>
               <p>User profile for a cat.</p>
               <p><img src="../images/daily-ui/006-user-profile.jpg" class="img-responsive" alt="User profile for a cat on mobile."/></p>
             </div>
             <div class="col-6">
-              <h3><a href="#007-settings">007 - Settings</a></h3>
+              <h3><a id="007-settings">007 - Settings</a></h3>
               <p>User profile settings.</p>
               <p><img src="../images/daily-ui/007-settings.jpg" class="img-responsive" alt="User profile settings."/></p>
             </div>
           </div>
           <div class="row">
             <div class="col-12">
-              <h3><a href="#008-404-page">008 - 404 page</a></h3>
+              <h3><a id="008-404-page">008 - 404 page</a></h3>
               <p>404 page for a fictional website.</p>
               <p><img src="../images/daily-ui/008-404-page.jpg" class="img-responsive" alt="404 page for a fictional website."/></p>
             </div>
           </div>
           <div class="row">
             <div class="col-6">
-              <h3><a href="#009-music-player">009 - Music player</a></h3>
+              <h3><a id="009-music-player">009 - Music player</a></h3>
               <p>User interface for a music player.</p>
               <p><img src="../images/daily-ui/009-music-player.jpg" class="img-responsive" alt="Music player interface."/></p>
             </div>
             <div class="col-6">
-              <h3><a href="#010-social-share">010 - Social Share</a></h3>
+              <h3><a id="010-social-share">010 - Social Share</a></h3>
               <p>Social share buttons for Twitter, Facebook and Google Plus.</p>
               <p><img src="../images/daily-ui/010-social-share.jpg" class="img-responsive" alt="Social share buttons for Twitter, Facebook and Google Plus."/></p>
             </div>
           </div>
           <div class="row">
             <div class="col-6">
-              <h3><a href="#011-flash-message">011 - Flash Message (Error/Success)</a></h3>
+              <h3><a id="011-flash-message">011 - Flash Message (Error/Success)</a></h3>
               <p>Error and success messages.</p>
               <p><img src="../images/daily-ui/011-flash-message.jpg" class="img-responsive" alt="Error and success messages."/></p>
             </div>
             <div class="col-6">
-              <h3><a href="#012-ecommerce-shop-single-item">012 - Ecommerce Shop (Single Item)</a></h3>
+              <h3><a id="012-ecommerce-shop-single-item">012 - Ecommerce Shop (Single Item)</a></h3>
               <p>Single item on an ecommerce shop. Introducing the Pot of Inspiration.</p>
               <p><img src="../images/daily-ui/012-ecommerce-shop-single-item.jpg" class="img-responsive" alt="Single item on an ecommerce shop. Introducing the Pot of Inspiration."/></p>
             </div>
           </div>
           <div class="row">
             <div class="col-12">
-              <h3><a href="#013-direct-messaging">013 - Direct Messaging</a></h3>
+              <h3><a id="013-direct-messaging">013 - Direct Messaging</a></h3>
               <p>An user interface for direct messaging.</p>
               <p><img src="../images/daily-ui/013-direct-messaging.jpg" class="img-responsive" alt="An user interface for direct messaging."/></p>
             </div>
           </div>
           <div class="row">
             <div class="col-6">
-              <h3><a href="#014-countdown-timer">014 - Countdown Timer</a></h3>
+              <h3><a id="014-countdown-timer">014 - Countdown Timer</a></h3>
               <p>A countdown timer for work breaks.</p>
               <p><img src="../images/daily-ui/014-countdown-timer.jpg" class="img-responsive" alt="A countdown timer for work breaks."/></p>
             </div>
             <div class="col-6">
-              <h3><a href="#015-on-off-switch">015 - On/Off Switch</a></h3>
+              <h3><a id="015-on-off-switch">015 - On/Off Switch</a></h3>
               <p>A simple on/off switch.</p>
               <p><img src="../images/daily-ui/015-on-off-switch.jpg" class="img-responsive" alt="A simple on/off switch."/></p>
             </div>
           </div>
           <div class="row">
             <div class="col-12">
-              <h3><a href="#016-pop-up-overlay">016 - Pop-Up / Overlay</a></h3>
+              <h3><a id="016-pop-up-overlay">016 - Pop-Up / Overlay</a></h3>
               <p>Pop-Up / Overlay - Sign Up for ice-cream flavours.</p>
               <p><img src="../images/daily-ui/016-pop-up-overlay.jpg" class="img-responsive" alt="Pop-Up / Overlay - Sign Up for ice-cream flavours."/></p>
             </div>
           </div>
           <div class="row">
             <div class="col-12">
-              <h3><a href="#017-email-receipt">017 - Email Receipt</a></h3>
+              <h3><a id="017-email-receipt">017 - Email Receipt</a></h3>
               <p>An email receipt from a fictional store.</p>
               <p><img src="../images/daily-ui/017-email-receipt.jpg" class="img-responsive" alt="An email receipt from a fictional store."/></p>
             </div>
           </div>
           <div class="row">
             <div class="col-12">
-              <h3><a href="#018-analytics-chart">018 - Analytics Chart</a></h3>
+              <h3><a id="018-analytics-chart">018 - Analytics Chart</a></h3>
               <p>User interface for displaying analytics.</p>
               <p><img src="../images/daily-ui/018-analytics-chart.jpg" class="img-responsive" alt="User interface for displaying analytics." style="border: 1px solid #ccc;"/></p>
             </div>
           </div>
           <div class="row">
             <div class="col-12">
-              <h3><a href="#019-leaderboard">019 - Leaderboard</a></h3>
+              <h3><a id="019-leaderboard">019 - Leaderboard</a></h3>
               <p>Leaderboard for the Big Ocean Swim.</p>
               <p><img src="../images/daily-ui/019-leaderboard.jpg" class="img-responsive" alt="Leaderboard for the Big Ocean Swim."/></p>
             </div>
           </div>
           <div class="row">
             <div class="col-12">
-              <h3><a href="#020-location-tracker">020 - Location Tracker</a></h3>
+              <h3><a id="020-location-tracker">020 - Location Tracker</a></h3>
               <p>Location Tracker using a fictional map.</p>
               <p><img src="../images/daily-ui/020-location-tracker.jpg" class="img-responsive" alt="Location Tracker using a fictional map."/></p>
             </div>
           </div>
           <div class="row">
             <div class="col-6">
-              <h3><a href="#021-home-monitoring-system">021 - Home Monitoring System</a></h3>
+              <h3><a id="021-home-monitoring-system">021 - Home Monitoring System</a></h3>
               <p>Home Monitoring System for lighting, power and temperature.</p>
               <p><img src="../images/daily-ui/021-home-monitoring-system.jpg" class="img-responsive" alt="Home Monitoring System for lighting, power and temperature."/></p>
             </div>
             <div class="col-6">
-              <h3><a href="#022-search">022 - Search</a></h3>
+              <h3><a id="022-search">022 - Search</a></h3>
               <p>Search interface for finding fresh produce.</p>
               <p><img src="../images/daily-ui/022-search.jpg" class="img-responsive" alt="Search interface for finding fresh produce."/></p>
             </div>
           </div>
           <div class="row">
             <div class="col-12">
-              <h3><a href="#023-onboarding">023 - Onboarding</a></h3>
+              <h3><a id="023-onboarding">023 - Onboarding</a></h3>
               <p>Onboarding cards for a space game.</p>
               <p><img src="../images/daily-ui/023-onboarding.jpg" class="img-responsive" alt="Onboarding cards for a space game."/></p>
             </div>
           </div>
           <div class="row">
             <div class="col-12">
-              <h3><a href="#024-boarding-pass">024 - Boarding Pass</a></h3>
+              <h3><a id="024-boarding-pass">024 - Boarding Pass</a></h3>
               <p>Boarding pass design.</p>
               <p><img src="../images/daily-ui/024-boarding-pass.jpg" class="img-responsive" alt="Boarding pass design."/></p>
             </div>
           </div>
           <div class="row">
             <div class="col-12">
-              <h3><a href="#025-tv-app">025 - TV App</a></h3>
+              <h3><a id="025-tv-app">025 - TV App</a></h3>
               <p>TV App for shows on the Public Domain.</p>
               <p><img src="../images/daily-ui/025-tv-app.jpg" class="img-responsive" alt="TV App for shows on the Public Domain."/></p>
             </div>
           </div>
           <div class="row">
             <div class="col-6">
-              <h3><a href="#026-subscribe">026 - Subscribe</a></h3>
+              <h3><a id="026-subscribe">026 - Subscribe</a></h3>
               <p>Subscribe call-to-action.</p>
               <p><img src="../images/daily-ui/026-subscribe.jpg" class="img-responsive" alt="Subscribe call-to-action."/></p>
             </div>
             <div class="col-6">
-              <h3><a href="#027-dropdown">027 - Dropdown</a></h3>
+              <h3><a id="027-dropdown">027 - Dropdown</a></h3>
               <p>Dropdown menu for meal items.</p>
               <p><img src="../images/daily-ui/027-dropdown.jpg" class="img-responsive" alt="Dropdown menu for meal items."/></p>
             </div>
           </div>
           <div class="row">
             <div class="col-12">
-              <h3><a href="#028-contact-us">028 - Contact Us</a></h3>
+              <h3><a id="028-contact-us">028 - Contact Us</a></h3>
               <p>Contact Us form.</p>
               <p><img src="../images/daily-ui/028-contact-us.jpg" class="img-responsive" alt="Contact Us form."/></p>
             </div>
           </div>
           <div class="row">
             <div class="col-12">
-              <h3><a href="#029-map">029 - Map</a></h3>
+              <h3><a id="029-map">029 - Map</a></h3>
               <p>Visitor map for Underwater World - A fictional marine education centre.</p>
               <p><img src="../images/daily-ui/029-map.jpg" class="img-responsive" alt="Visitor map for Underwater World - A fictional marine education centre."/></p>
             </div>
           </div>
           <div class="row">
             <div class="col-12">
-              <h3><a href="#030-pricing">030 - Pricing</a></h3>
+              <h3><a id="030-pricing">030 - Pricing</a></h3>
               <p>Pricing for services.</p>
               <p><img src="../images/daily-ui/030-pricing.jpg" class="img-responsive" alt="Pricing for services."/></p>
             </div>
           </div>
           <div class="row">
             <div class="col-12">
-              <h3><a href="#031-file-upload">031 - File Upload</a></h3>
+              <h3><a id="031-file-upload">031 - File Upload</a></h3>
               <p>A simple file upload interface.</p>
               <p><img src="../images/daily-ui/031-file-upload.jpg" class="img-responsive" alt="A simple file upload interface."/></p>
             </div>
           </div>
           <div class="row">
             <div class="col-12">
-              <h3><a href="#032-crowdfunding-campaign">032 - Crowdfunding Campaign</a></h3>
+              <h3><a id="032-crowdfunding-campaign">032 - Crowdfunding Campaign</a></h3>
               <p>Crowdfunding campaign for <em>The humble muffin stand</em>.</p>
               <p><img src="../images/daily-ui/032-crowdfunding-campaign.jpg" class="img-responsive" alt="Crowdfunding campaign for the humble muffin stand."/></p>
             </div>
           </div>
           <div class="row">
             <div class="col-12">
-              <h3><a href="#033-customise-product">033 - Customise Product</a></h3>
+              <h3><a id="033-customise-product">033 - Customise Product</a></h3>
               <p>Customise Product - Woolen Gloves.</p>
               <p><img src="../images/daily-ui/033-customise-product.jpg" class="img-responsive" alt="Customise product for woolen gloves."/></p>
             </div>
           </div>
           <div class="row">
             <div class="col-12">
-              <h3><a href="#034-car-interface">034 - Car Interface</a></h3>
+              <h3><a id="034-car-interface">034 - Car Interface</a></h3>
               <p>A basic car interface.</p>
               <p><img src="../images/daily-ui/034-car-interface.jpg" class="img-responsive" alt="A basic car interface."/></p>
             </div>
           </div>
           <div class="row">
             <div class="col-12">
-              <h3><a href="#035-blog-post">035 - Blog Post</a></h3>
+              <h3><a id="035-blog-post">035 - Blog Post</a></h3>
               <p>Blog post about a cat's thoughts.</p>
               <p><img src="../images/daily-ui/035-blog-post.jpg" class="img-responsive" alt="Blog post about a cat's thoughts."/></p>
             </div>
