--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -44,13 +44,13 @@
         </div>
         <div class="container">
           <!--Begin main content-->
-          <div class="row">
+          <!--div class="row">
             <div class="col-6">
               <h3><a id="036-special-offer">037 - Weather</a></h3>
               <p>Weather forecast for Wellington.</p>
               <p><img src="../images/daily-ui/037-weather.jpg" class="img-responsive" alt="Weather forecast for Wellington."/></p>
             </div>
-          </div>
+          </div-->
           <div class="row">
             <div class="col-12">
               <h3><a id="036-special-offer">036 - Special Offer</a></h3>
