--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -46,7 +46,12 @@
           <!--Begin main content-->
           <div class="row">
             <div class="col-6">
-              <h3><a id="036-special-offer">037 - Weather</a></h3>
+              <h3><a id="038-calendar">038 - Calendar</a></h3>
+              <p>Calendar - month view.</p>
+              <p><img src="../images/daily-ui/038-calendar.jpg" class="img-responsive" alt="Calendar - month view."/></p>
+            </div>
+            <div class="col-6">
+              <h3><a id="037-weather">037 - Weather</a></h3>
               <p>Weather forecast for Wellington.</p>
               <p><img src="../images/daily-ui/037-weather.jpg" class="img-responsive" alt="Weather forecast for Wellington."/></p>
             </div>
