Modified intro text on the home and about pages.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="intro">
           <div class="container">
             <h1>Projects</h1>
-            <p class="big">I like to design creative user interfaces and graphics for the web. Here is a showcase of some projects that I've worked on.</p>
+            <p class="big">I like to design creative user interfaces for the web. Here is a showcase of some projects that I've worked on.</p>
           </div>
         </div>
         <div class="container">
