--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
           <div class="container">
             <!--Begin introduction-->
             <h1>About</h1>
-            <p class="big">Hello my name is Rosanna. I am a web designer with a keen interest in user interface and user experience design, front-end development, and collaborating with others to build rich applications.</p>
+            <p class="big">Hello my name is Rosanna. I am enthusiastic about designing interfaces for the web, and collaborating with others to solve interesting problems.</p>
 
             <p class="big">I believe in continuous improvement and am always seeking opportunities to improve myself professionally and personally.</p>
             <!--End introduction-->
