--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -45,6 +45,13 @@
         <div class="container">
           <!--Begin main content-->
           <div class="row">
+            <div class="col-12">
+              <h3><a id="039-testimonials">039 - Testimonials</a></h3>
+              <p>Testimonials.</p>
+              <p><img src="../images/daily-ui/039-testimonials.jpg" class="img-responsive" alt="Testimonials."/></p>
+            </div>
+          </div>
+          <div class="row">
             <div class="col-6">
               <h3><a id="038-calendar">038 - Calendar</a></h3>
               <p>Calendar - month view.</p>
