--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -45,6 +45,13 @@
         <div class="container">
           <!--Begin main content-->
           <div class="row">
+            <div class="col-6">
+              <h3><a id="040-testimonials">040 - Recipe</a></h3>
+              <p>Recipe for Quick BLT Salad.</p>
+              <p><img src="../images/daily-ui/040-recipe.jpg" class="img-responsive" alt="Recipe for Quick BLT Salad."/></p>
+            </div>
+          </div>
+          <div class="row">
             <div class="col-12">
               <h3><a id="039-testimonials">039 - Testimonials</a></h3>
               <p>Testimonials.</p>
