--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -46,6 +46,11 @@
           <!--Begin main content-->
           <div class="row">
             <div class="col-12">
+              <h3><a id="040-testimonials">041 - Workout Tracker</a></h3>
+              <p>Workout tracker.</p>
+              <p><img src="../images/daily-ui/041-workout-tracker.jpg" class="img-responsive" alt="Workout tracker."/></p>
+            </div>
+            <div class="col-12">
               <h3><a id="040-testimonials">040 - Recipe</a></h3>
               <p>Recipe for Quick BLT Salad.</p>
               <p><img src="../images/daily-ui/040-recipe.jpg" class="img-responsive" alt="Recipe for Quick BLT Salad."/></p>
