--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -45,13 +45,20 @@
         <div class="container">
           <!--Begin main content-->
           <div class="row">
-            <div class="col-12">
-              <h3><a id="041-testimonials">041 - Workout Tracker</a></h3>
+            <div class="col-6">
+              <h3><a id="042-todo-list">042 - ToDo List</a></h3>
+              <p>My ToDo List.</p>
+              <p><img src="../images/daily-ui/042-todo-list.jpg" class="img-responsive" alt="ToDo List."/></p>
+            </div>
+            <div class="col-6">
+              <h3><a id="041-workout-tracker">041 - Workout Tracker</a></h3>
               <p>Workout tracker.</p>
               <p><img src="../images/daily-ui/041-workout-tracker.jpg" class="img-responsive" alt="Workout tracker."/></p>
             </div>
+          </div>
+          <div class="row">
             <div class="col-12">
-              <h3><a id="040-testimonials">040 - Recipe</a></h3>
+              <h3><a id="040-recipe">040 - Recipe</a></h3>
               <p>Recipe for Quick BLT Salad.</p>
               <p><img src="../images/daily-ui/040-recipe.jpg" class="img-responsive" alt="Recipe for Quick BLT Salad."/></p>
             </div>
