--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -46,6 +46,13 @@
           <!--Begin main content-->
           <div class="row">
             <div class="col-6">
+              <h3><a id="043-todo-list">043 - Food/Drink Menu</a></h3>
+              <p>Menu for pies and drinks.</p>
+              <p><img src="../images/daily-ui/043-food-drink-menu.jpg" class="img-responsive" alt="Menu for pies and drinks."/></p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-6">
               <h3><a id="042-todo-list">042 - ToDo List</a></h3>
               <p>My ToDo List.</p>
               <p><img src="../images/daily-ui/042-todo-list.jpg" class="img-responsive" alt="ToDo List."/></p>
