--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -45,6 +45,13 @@
         <div class="container">
           <!--Begin main content-->
           <div class="row">
+            <div class="col-6">
+              <h3><a id="044-favourites">044 - Favourites</a></h3>
+              <p>Favourites for an app.</p>
+              <p><img src="../images/daily-ui/044-favourites.jpg" class="img-responsive" alt="Favourites."/></p>
+            </div>
+          </div>
+          <div class="row">
             <div class="col-12">
               <h3><a id="043-todo-list">043 - Food/Drink Menu</a></h3>
               <p>Menu for pies and drinks.</p>
