--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -46,6 +46,11 @@
           <!--Begin main content-->
           <div class="row">
             <div class="col-6">
+              <h3><a id="045-info-card">045 - Info Card</a></h3>
+              <p>Info card on the Question Mark.</p>
+              <p><img src="../images/daily-ui/045-info-card.jpg" class="img-responsive" alt="Info card on the Question Mark."/></p>
+            </div>
+            <div class="col-6">
               <h3><a id="044-favourites">044 - Favourites</a></h3>
               <p>Favourites for an app.</p>
               <p><img src="../images/daily-ui/044-favourites.jpg" class="img-responsive" alt="Favourites."/></p>
