Added notification message to website.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
   </head>
   <body>
     <div class="page-wrap">
+      <div id="message" class="slideup">
+        <div class="container">
+          <p>New portfolio site coming soon! <a href="#" class="hide">close <span class="fa fa-times-circle"></span></a></p>
+        </div>
+      </div>
       <header>
         <div class="container">
           <div class="logo">
@@ -236,6 +241,7 @@
     </footer>
     <script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
     <script type="text/javascript" src="js/menu-toggle.js"></script>
+    <script type="text/javascript" src="js/hide-message.js"></script>
     <script type="text/javascript">
       $(document).ready(function() {
         $('.up-button').click(function(){
