--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -50,6 +50,13 @@
         <div class="container">
           <!--Begin main content-->
           <div class="row">
+            <div class="col-12">
+              <h3><a id="045-info-card">046 - Invoice</a></h3>
+              <p>Invoice for web design and development services.</p>
+              <p><img src="../images/daily-ui/046-invoice.jpg" class="img-responsive" alt="Invoice for web design and development services."/></p>
+            </div>
+          </div>
+          <div class="row">
             <div class="col-6">
               <h3><a id="045-info-card">045 - Info Card</a></h3>
               <p>Info card on the Question Mark.</p>
