--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -50,7 +50,12 @@
         <div class="container">
           <!--Begin main content-->
           <div class="row">
-            <div class="col-12">
+            <div class="col-6">
+              <h3><a id="049-notifications">049 - Notifications</a></h3>
+              <p>Notifications for email, sms, and voice messages.</p>
+              <p><img src="../images/daily-ui/049-notifications.jpg" class="img-responsive" alt="Notifications for email, sms, and voice messages."/></p>
+            </div>
+            <div class="col-6">
               <h3><a id="048-coming-soon">048 - Coming Soon</a></h3>
               <p>Coming soon message.</p>
               <p><img src="../images/daily-ui/048-coming-soon.jpg" class="img-responsive" alt="Coming soon message."/></p>
