--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -51,6 +51,13 @@
           <!--Begin main content-->
           <div class="row">
             <div class="col-6">
+              <h3><a id="050-job-listing">050 - Job Listing</a></h3>
+              <p>Job Listing for a Superhero.</p>
+              <p><img src="../images/daily-ui/050-job-listing.jpg" class="img-responsive" alt="Job Listing for a Superhero."/></p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-6">
               <h3><a id="049-notifications">049 - Notifications</a></h3>
               <p>Notifications for email, sms, and voice messages.</p>
               <p><img src="../images/daily-ui/049-notifications.jpg" class="img-responsive" alt="Notifications for email, sms, and voice messages."/></p>
