Fixed description for link for the shopping app.

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     </ul>
                   </div>
                   <div class="overlay">
-                    <p><span class="sr-only">Find out more about the Horowhenua Honey Co website.</span></p>
+                    <p><span class="sr-only">Find out more about the Shopping App concept.</span></p>
                   </div>
                 </a>
               </div>
