--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -50,7 +50,12 @@
         <div class="container">
           <!--Begin main content-->
           <div class="row">
-            <div class="col-12">
+            <div class="col-6">
+              <h3><a id="051-job-listing">051 - Press Page</a></h3>
+              <p>Press page about the sea.</p>
+              <p><img src="../images/daily-ui/051-press-page.jpg" class="img-responsive" alt="Press page about the sea."/></p>
+            </div>
+            <div class="col-6">
               <h3><a id="050-job-listing">050 - Job Listing</a></h3>
               <p>Job Listing for a Superhero.</p>
               <p><img src="../images/daily-ui/050-job-listing.jpg" class="img-responsive" alt="Job Listing for a Superhero."/></p>
