--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -50,6 +50,13 @@
         <div class="container">
           <!--Begin main content-->
           <div class="row">
+            <div class="col-12">
+              <h3><a id="052-daily-ui-logo">052 - Daily UI Logo</a></h3>
+              <p>Logo designs for Daily UI.</p>
+              <p><img src="../images/daily-ui/052-daily-ui.jpg" class="img-responsive" alt="Logo designs for Daily UI."/></p>
+            </div>
+          </div>
+          <div class="row">
             <div class="col-6">
               <h3><a id="051-job-listing">051 - Press Page</a></h3>
               <p>Press page about the sea.</p>
