--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -50,7 +50,12 @@
         <div class="container">
           <!--Begin main content-->
           <div class="row">
-            <div class="col-12">
+            <div class="col-6">
+              <h3><a id="053-header-navigation">053 - Header Navigation</a></h3>
+              <p>Responsive header navigation.</p>
+              <p><img src="../images/daily-ui/053-header-navigation.jpg" class="img-responsive" alt="Responsive header navigation."/></p>
+            </div>
+            <div class="col-6">
               <h3><a id="052-daily-ui-logo">052 - Daily UI Logo</a></h3>
               <p>Logo designs for Daily UI.</p>
               <p><img src="../images/daily-ui/052-daily-ui-logo.jpg" class="img-responsive" alt="Logo designs for Daily UI."/></p>
