--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -51,6 +51,13 @@
           <!--Begin main content-->
           <div class="row">
             <div class="col-6">
+              <h3><a id="054-confirm-reservation">054 - Confirm Reservation</a></h3>
+              <p>Confirm reservation for a Safari Tour.</p>
+              <p><img src="../images/daily-ui/054-confirm-reservation.jpg" class="img-responsive" alt="Confirm reservation for a Safari Tour."/></p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-6">
               <h3><a id="053-header-navigation">053 - Header Navigation</a></h3>
               <p>Responsive header navigation.</p>
               <p><img src="../images/daily-ui/053-header-navigation.jpg" class="img-responsive" alt="Responsive header navigation."/></p>
