--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -51,6 +51,11 @@
           <!--Begin main content-->
           <div class="row">
             <div class="col-6">
+              <h3><a id="055-icon-set">055 - Icon Set</a></h3>
+              <p>Icon set of animal faces.</p>
+              <p><img src="../images/daily-ui/055-icon-set.jpg" class="img-responsive" alt="Icon set of animal faces."/></p>
+            </div>
+            <div class="col-6">
               <h3><a id="054-confirm-reservation">054 - Confirm Reservation</a></h3>
               <p>Confirm reservation for a Safari Tour.</p>
               <p><img src="../images/daily-ui/054-confirm-reservation.jpg" class="img-responsive" alt="Confirm reservation for a Safari Tour."/></p>
