--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -50,6 +50,13 @@
         <div class="container">
           <!--Begin main content-->
           <div class="row">
+            <div class="col-12">
+              <h3><a id="056-icon-set">056 - Breadcrumbs</a></h3>
+              <p>Breadcrumbs.</p>
+              <p><img src="../images/daily-ui/056-breadcrumbs.jpg" class="img-responsive" alt="Breadcrumbs."/></p>
+            </div>
+          </div>
+          <div class="row">
             <div class="col-6">
               <h3><a id="055-icon-set">055 - Icon Set</a></h3>
               <p>Icon set of animal faces.</p>
