--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -50,6 +50,13 @@
         <div class="container">
           <!--Begin main content-->
           <div class="row">
+            <div class="col-6">
+              <h3><a id="057-video-payer">057 - Video Player</a></h3>
+              <p>Video Player.</p>
+              <p><img src="../images/daily-ui/057-video-player.jpg" class="img-responsive" alt="Video Player."/></p>
+            </div>
+          </div>
+          <div class="row">
             <div class="col-12">
               <h3><a id="056-icon-set">056 - Breadcrumbs</a></h3>
               <p>Breadcrumbs.</p>
