--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -51,7 +51,12 @@
           <!--Begin main content-->
           <div class="row">
             <div class="col-6">
-              <h3><a id="057-video-payer">057 - Video Player</a></h3>
+              <h3><a id="058-shopping-cart">058 - Shopping Cart</a></h3>
+              <p>Shopping cart interface.</p>
+              <p><img src="../images/daily-ui/058-shopping-cart.jpg" class="img-responsive" alt="Shopping cart interface."/></p>
+            </div>
+            <div class="col-6">
+              <h3><a id="057-video-player">057 - Video Player</a></h3>
               <p>Video Player.</p>
               <p><img src="../images/daily-ui/057-video-player.jpg" class="img-responsive" alt="Video Player."/></p>
             </div>
