Modified link to horowhenua honey co.

--- a/projects/horowhenua-honey-co.html
+++ b/projects/horowhenua-honey-co.html
@@ -43,8 +43,9 @@
           <div class="container">
             <!--Begin introduction-->
             <h1>Horowhenua Honey Co Website</h1>
-            <p class="big">I was recently approached to design the brand collateral and website for Horowhenua Honey Co. The website will eventually contain an online store using <a href="https://www.shopify.co.nz/">Shopify <span class="sr-only">. This link will take you to an external website.</span><span class="fa fa-external-link"></span></a>.</p>
-            <p class="big">At the moment, a static HTML preview of the website for Horowhenua Honey Co is available at <a href="https://preview.rosanna.co.nz/">preview.rosannna.co.nz <span class="sr-only">. This link will take you to an external website.</span><span class="fa fa-external-link"></span></a>.</p>
+            <p class="big">I was approached to design the brand collateral and website for Horowhenua Honey Co. You can visit their website at <a href="http://horowhenuahoney.co.nz/">horowhenuahoney.co.nz <span class="sr-only">. This link will take you to an external website.</span><span class="fa fa-external-link"></span></a>.</p>
+
+            <p>The website will eventually contain an online store using <a href="https://www.shopify.co.nz/">Shopify <span class="sr-only">. This link will take you to an external website.</span><span class="fa fa-external-link"></span></a>.</p>
             <!--End introduction-->
           </div>
         </div>
