--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -50,6 +50,13 @@
         <div class="container">
           <!--Begin main content-->
           <div class="row">
+            <div class="col-12">
+              <h3><a id="059-background-pattern">059 - Background Pattern</a></h3>
+              <p>A background pattern.</p>
+              <p><img src="../images/daily-ui/059-background-pattern.jpg" class="img-responsive" alt="A background pattern."/></p>
+            </div>
+          </div>
+          <div class="row">
             <div class="col-6">
               <h3><a id="058-shopping-cart">058 - Shopping Cart</a></h3>
               <p>Shopping cart interface.</p>
