--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -50,7 +50,12 @@
         <div class="container">
           <!--Begin main content-->
           <div class="row">
-            <div class="col-12">
+            <div class="col-6">
+              <h3><a id="060-colour-picker">060 - Colour Picker</a></h3>
+              <p>A colour picker inspired by <a href="http://www.0to255.com/">0to255.com <span class="sr-only">. This link will take you to an external website.</span><span class="fa fa-external-link"></span></a> and <a href="https://color.adobe.com/">color.adobe.com <span class="sr-only">. This link will take you to an external website.</span><span class="fa fa-external-link"></span></a>.</p>
+              <p><img src="../images/daily-ui/060-colour-picker.jpg" class="img-responsive" alt="Colour picker."/></p>
+            </div>
+            <div class="col-6">
               <h3><a id="059-background-pattern">059 - Background Pattern</a></h3>
               <p>A background pattern.</p>
               <p><img src="../images/daily-ui/059-background-pattern.jpg" class="img-responsive" alt="A background pattern."/></p>
