--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -50,6 +50,13 @@
         <div class="container">
           <!--Begin main content-->
           <div class="row">
+            <div class="col-12">
+              <h3><a id="061-redeem-coupon">061 - Redeem Coupon</a></h3>
+              <p>Redeem Coupon - Buy a cofee and get a muffin for free!</p>
+              <p><img src="../images/daily-ui/061-background-pattern.jpg" class="img-responsive" alt="Redeem Coupon - Buy a cofee and get a muffin for free!"/></p>
+            </div>
+          </div>
+          <div class="row">
             <div class="col-6">
               <h3><a id="060-colour-picker">060 - Colour Picker</a></h3>
               <p>A colour picker inspired by <a href="http://www.0to255.com/">0to255.com <span class="sr-only">. This link will take you to an external website.</span><span class="fa fa-external-link"></span></a> and <a href="https://color.adobe.com/">color.adobe.com <span class="sr-only">. This link will take you to an external website.</span><span class="fa fa-external-link"></span></a>.</p>
