Fixed spelling mistake for dailyui 061.

--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -52,7 +52,7 @@
           <div class="row">
             <div class="col-12">
               <h3><a id="061-redeem-coupon">061 - Redeem Coupon</a></h3>
-              <p>Redeem Coupon - Buy a cofee and get a muffin for free!</p>
+              <p>Redeem Coupon - Buy a coffee and get a muffin for free!</p>
               <p><img src="../images/daily-ui/061-redeem-coupon.jpg" class="img-responsive" alt="Redeem Coupon - Buy a cofee and get a muffin for free!"/></p>
             </div>
           </div>
