--- a/projects/dailyui.html
+++ b/projects/dailyui.html
@@ -36,6 +36,12 @@
 
             <!-- Gridder gallery -->
             <ul class="gridder">
+                <li class="gridder-list" data-griddercontent="#gridder-content-62">
+                    <img src="../images/dailyui/thumbs/062-workout-of-the-day-thumb.jpg" class="img-responsive" alt="Workout of the Day"/>
+                    <div class="label">
+                        <p>Day #062</p>
+                    </div>
+                </li>
                 <li class="gridder-list" data-griddercontent="#gridder-content-61">
                     <img src="../images/dailyui/thumbs/061-redeem-coupon-thumb.jpg" class="img-responsive" alt="Redeem Coupon"/>
                     <div class="label">
@@ -404,6 +410,14 @@
                 </li>
             </ul>
             <!-- Gridder content -->
+            <div id="gridder-content-62" class="gridder-content">
+                <div class="gridder-image">
+                    <img src="../images/dailyui/full/062-workout-of-the-day.jpg" class="img-responsive" alt="Workout of the Day"/>
+                </div>
+                <div class="gridder-description">
+                    <h2>DailyUI 062 - Workout of the Day</h2>
+                </div>
+            </div>
             <div id="gridder-content-61" class="gridder-content">
                 <div class="gridder-image">
                     <img src="../images/dailyui/full/061-redeem-coupon.jpg" class="img-responsive" alt="Redeem Coupon"/>
