--- a/projects/dailyui.html
+++ b/projects/dailyui.html
@@ -22,7 +22,7 @@
             <div class="header__text">
                 <h1>Daily UI</h1>
                 <h2>100 days of designing user interfaces.</h2>
-                <p class="header__subhead">I decided to try out the DailyUI challenge for 100 days. Here are my designs so far. More designs to come! Also follow me on Twitter <a href="https://twitter.com/rosanna_fong">@rosanna_fong <span class="sr-only">. This link will take you to an external website. It will take you to Rosanna's Twitter profile.</span></a>.</p>
+                <p class="header__subhead">I decided to try out the DailyUI challenge for 100 days. Here are my designs so far. More designs to come! Also follow me on Twitter <a href="https://twitter.com/rosanna_fong">@rosanna_fong <span class="sr-only">. This link will take you to an external website. It will take you to Rosanna's Twitter profile.</span><span class="fa fa-external-link"></span></a>.</p>
             </div>
         </header>
         <main>
@@ -36,6 +36,12 @@
 
             <!-- Gridder gallery -->
             <ul class="gridder">
+                <li class="gridder-list" data-griddercontent="#gridder-content-63">
+                    <img src="../images/dailyui/thumbs/063-best-of-2015-thumb.jpg" class="img-responsive" alt="Best of 2015"/>
+                    <div class="label">
+                        <p>Day #063</p>
+                    </div>
+                </li>
                 <li class="gridder-list" data-griddercontent="#gridder-content-62">
                     <img src="../images/dailyui/thumbs/062-workout-of-the-day-thumb.jpg" class="img-responsive" alt="Workout of the Day"/>
                     <div class="label">
@@ -410,6 +416,14 @@
                 </li>
             </ul>
             <!-- Gridder content -->
+            <div id="gridder-content-63" class="gridder-content">
+                <div class="gridder-image">
+                    <img src="../images/dailyui/full/063-best-of-2015.jpg" class="img-responsive" alt="Best of 2015"/>
+                </div>
+                <div class="gridder-description">
+                    <h2>DailyUI 063 - Best of 2015</h2>
+                </div>
+            </div>
             <div id="gridder-content-62" class="gridder-content">
                 <div class="gridder-image">
                     <img src="../images/dailyui/full/062-workout-of-the-day.jpg" class="img-responsive" alt="Workout of the Day"/>
