--- a/projects/dailyui.html
+++ b/projects/dailyui.html
@@ -36,6 +36,12 @@
 
             <!-- Gridder gallery -->
             <ul class="gridder">
+                <li class="gridder-list" data-griddercontent="#gridder-content-64">
+                    <img src="../images/dailyui/thumbs/064-select-user-type-thumb.jpg" class="img-responsive" alt="Best of 2015"/>
+                    <div class="label">
+                        <p>Day #064</p>
+                    </div>
+                </li>
                 <li class="gridder-list" data-griddercontent="#gridder-content-63">
                     <img src="../images/dailyui/thumbs/063-best-of-2015-thumb.jpg" class="img-responsive" alt="Best of 2015"/>
                     <div class="label">
@@ -416,6 +422,14 @@
                 </li>
             </ul>
             <!-- Gridder content -->
+            <div id="gridder-content-64" class="gridder-content">
+                <div class="gridder-image">
+                    <img src="../images/dailyui/full/064-select-user-type.jpg" class="img-responsive" alt="Select User Type"/>
+                </div>
+                <div class="gridder-description">
+                    <h2>DailyUI 064 - Select User Type</h2>
+                </div>
+            </div>
             <div id="gridder-content-63" class="gridder-content">
                 <div class="gridder-image">
                     <img src="../images/dailyui/full/063-best-of-2015.jpg" class="img-responsive" alt="Best of 2015"/>
