--- a/index.html
+++ b/index.html
@@ -184,7 +184,8 @@
             </div>
         </footer>
     </div>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="js/page-animation.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -193,8 +194,6 @@
 
       ga('create', 'UA-48072101-1', 'auto');
       ga('send', 'pageview');
-
     </script>
-
 </body>
 </html>
