--- a/projects/project-graphics.html
+++ b/projects/project-graphics.html
@@ -188,6 +188,7 @@
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="../js/jquery.gridder.js"></script>
+    <script src="../js/page-animation.js"></script>
     <script>
         jQuery(document).ready(function ($) {
 
