--- a/projects/dailyui.html
+++ b/projects/dailyui.html
@@ -36,6 +36,12 @@
 
             <!-- Gridder gallery -->
             <ul class="gridder">
+                <li class="gridder-list" data-griddercontent="#gridder-content-65">
+                    <img src="../images/dailyui/thumbs/065-notes-widget-thumb.jpg" class="img-responsive" alt="Notes Widget"/>
+                    <div class="label">
+                        <p>Day #065</p>
+                    </div>
+                </li>
                 <li class="gridder-list" data-griddercontent="#gridder-content-64">
                     <img src="../images/dailyui/thumbs/064-select-user-type-thumb.jpg" class="img-responsive" alt="Best of 2015"/>
                     <div class="label">
@@ -422,6 +428,14 @@
                 </li>
             </ul>
             <!-- Gridder content -->
+            <div id="gridder-content-65" class="gridder-content">
+                <div class="gridder-image">
+                    <img src="../images/dailyui/full/065-notes-widget.jpg" class="img-responsive" alt="Notes Widget"/>
+                </div>
+                <div class="gridder-description">
+                    <h2>DailyUI 065 - Notes Widget</h2>
+                </div>
+            </div>
             <div id="gridder-content-64" class="gridder-content">
                 <div class="gridder-image">
                     <img src="../images/dailyui/full/064-select-user-type.jpg" class="img-responsive" alt="Select User Type"/>
