--- a/projects/dailyui.html
+++ b/projects/dailyui.html
@@ -36,6 +36,12 @@
 
             <!-- Gridder gallery -->
             <ul class="gridder">
+                <li class="gridder-list" data-griddercontent="#gridder-content-66">
+                    <img src="../images/dailyui/thumbs/066-statistics-thumb.jpg" class="img-responsive" alt="Statistics - Average temperature of planets on our solar system."/>
+                    <div class="label">
+                        <p>Day #066</p>
+                    </div>
+                </li>
                 <li class="gridder-list" data-griddercontent="#gridder-content-65">
                     <img src="../images/dailyui/thumbs/065-notes-widget-thumb.jpg" class="img-responsive" alt="Notes Widget"/>
                     <div class="label">
@@ -428,6 +434,14 @@
                 </li>
             </ul>
             <!-- Gridder content -->
+            <div id="gridder-content-66" class="gridder-content">
+                <div class="gridder-image">
+                    <img src="../images/dailyui/full/066-statistics.jpg" class="img-responsive" alt="Statistics - Average temperature of planets on our solar system."/>
+                </div>
+                <div class="gridder-description">
+                    <h2>DailyUI 066 - Statistics - Average temperature of planets on our solar system</h2>
+                </div>
+            </div>
             <div id="gridder-content-65" class="gridder-content">
                 <div class="gridder-image">
                     <img src="../images/dailyui/full/065-notes-widget.jpg" class="img-responsive" alt="Notes Widget"/>
