--- a/projects/dailyui.html
+++ b/projects/dailyui.html
@@ -36,6 +36,12 @@
 
             <!-- Gridder gallery -->
             <ul class="gridder">
+                <li class="gridder-list" data-griddercontent="#gridder-content-67">
+                    <img src="../images/dailyui/thumbs/067-hotel-booking-thumb.jpg" class="img-responsive" alt="Hotel Booking"/>
+                    <div class="label">
+                        <p>Day #067</p>
+                    </div>
+                </li>
                 <li class="gridder-list" data-griddercontent="#gridder-content-66">
                     <img src="../images/dailyui/thumbs/066-statistics-thumb.jpg" class="img-responsive" alt="Statistics - Average temperature of planets on our solar system."/>
                     <div class="label">
@@ -434,6 +440,14 @@
                 </li>
             </ul>
             <!-- Gridder content -->
+            <div id="gridder-content-67" class="gridder-content">
+                <div class="gridder-image">
+                    <img src="../images/dailyui/full/067-hotel-booking.jpg" class="img-responsive" alt="Hotel Booking"/>
+                </div>
+                <div class="gridder-description">
+                    <h2>DailyUI 067 - Hotel Booking</h2>
+                </div>
+            </div>
             <div id="gridder-content-66" class="gridder-content">
                 <div class="gridder-image">
                     <img src="../images/dailyui/full/066-statistics.jpg" class="img-responsive" alt="Statistics - Average temperature of planets on our solar system."/>
