--- a/projects/dailyui.html
+++ b/projects/dailyui.html
@@ -36,6 +36,12 @@
 
             <!-- Gridder gallery -->
             <ul class="gridder">
+                <li class="gridder-list" data-griddercontent="#gridder-content-68">
+                    <img src="../images/dailyui/thumbs/068-flight-search-thumb.jpg" class="img-responsive" alt="Flight Search"/>
+                    <div class="label">
+                        <p>Day #068</p>
+                    </div>
+                </li>
                 <li class="gridder-list" data-griddercontent="#gridder-content-67">
                     <img src="../images/dailyui/thumbs/067-hotel-booking-thumb.jpg" class="img-responsive" alt="Hotel Booking"/>
                     <div class="label">
@@ -440,6 +446,14 @@
                 </li>
             </ul>
             <!-- Gridder content -->
+            <div id="gridder-content-68" class="gridder-content">
+                <div class="gridder-image">
+                    <img src="../images/dailyui/full/068-flight-search.jpg" class="img-responsive" alt="Flight Search"/>
+                </div>
+                <div class="gridder-description">
+                    <h2>DailyUI 068 - Flight Search</h2>
+                </div>
+            </div>
             <div id="gridder-content-67" class="gridder-content">
                 <div class="gridder-image">
                     <img src="../images/dailyui/full/067-hotel-booking.jpg" class="img-responsive" alt="Hotel Booking"/>
