--- a/projects/dailyui.html
+++ b/projects/dailyui.html
@@ -36,6 +36,12 @@
 
             <!-- Gridder gallery -->
             <ul class="gridder">
+                <li class="gridder-list" data-griddercontent="#gridder-content-69">
+                    <img src="../images/dailyui/thumbs/069-trending-thumb.jpg" class="img-responsive" alt="Trending"/>
+                    <div class="label">
+                        <p>Day #069</p>
+                    </div>
+                </li>
                 <li class="gridder-list" data-griddercontent="#gridder-content-68">
                     <img src="../images/dailyui/thumbs/068-flight-search-thumb.jpg" class="img-responsive" alt="Flight Search"/>
                     <div class="label">
@@ -446,6 +452,14 @@
                 </li>
             </ul>
             <!-- Gridder content -->
+            <div id="gridder-content-69" class="gridder-content">
+                <div class="gridder-image">
+                    <img src="../images/dailyui/full/069-trending.jpg" class="img-responsive" alt="Trending"/>
+                </div>
+                <div class="gridder-description">
+                    <h2>DailyUI 069 - Trending</h2>
+                </div>
+            </div>
             <div id="gridder-content-68" class="gridder-content">
                 <div class="gridder-image">
                     <img src="../images/dailyui/full/068-flight-search.jpg" class="img-responsive" alt="Flight Search"/>
