--- a/projects/dailyui.html
+++ b/projects/dailyui.html
@@ -36,6 +36,12 @@
 
             <!-- Gridder gallery -->
             <ul class="gridder">
+                <li class="gridder-list" data-griddercontent="#gridder-content-70">
+                    <img src="../images/dailyui/thumbs/070-events-listing-thumb.jpg" class="img-responsive" alt="Events Listing"/>
+                    <div class="label">
+                        <p>Day #070</p>
+                    </div>
+                </li>
                 <li class="gridder-list" data-griddercontent="#gridder-content-69">
                     <img src="../images/dailyui/thumbs/069-trending-thumb.jpg" class="img-responsive" alt="Trending"/>
                     <div class="label">
@@ -452,6 +458,14 @@
                 </li>
             </ul>
             <!-- Gridder content -->
+            <div id="gridder-content-70" class="gridder-content">
+                <div class="gridder-image">
+                    <img src="../images/dailyui/full/070-events-listing.jpg" class="img-responsive" alt="Events Listing"/>
+                </div>
+                <div class="gridder-description">
+                    <h2>DailyUI 070 - Events Listing</h2>
+                </div>
+            </div>
             <div id="gridder-content-69" class="gridder-content">
                 <div class="gridder-image">
                     <img src="../images/dailyui/full/069-trending.jpg" class="img-responsive" alt="Trending"/>
